Triggers/src/objects/Validation__c.object
<CustomObject>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit_Card_Number</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mix_Pct__c</fullName>
        <label>Mix Pct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Multiple_of_5__c</fullName>
        <label>Multiple of 5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Validation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Validation No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Validations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CheckCreditCardNumber</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( REGEX(  Credit_Card_Number__c , &quot;(((\\d{4}-){3}\\d{4})|\\d{16})?&quot;))</errorConditionFormula>
        <errorDisplayField>Credit_Card_Number__c</errorDisplayField>
        <errorMessage>Credit Card Number should be formatted in 9999-9999-9999-9999 or 9999999999999999</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckMultipleOfFive</fullName>
        <active>true</active>
        <errorConditionFormula>MOD( Multiple_of_5__c , 5) &lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>Multiple_of_5__c</errorDisplayField>
        <errorMessage>Value is not a multiple of 5</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckValidMixPct</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
 Mix_Pct__c &lt; 0.0,
 Mix_Pct__c &gt; 1.0
)</errorConditionFormula>
        <errorDisplayField>Mix_Pct__c</errorDisplayField>
        <errorMessage>Percentage is invalid ( can only lie between 0 to 100%)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckWeekday</fullName>
        <active>true</active>
        <errorConditionFormula>CASE(
 MOD( Date__c - DATE(1900, 1, 7), 7),
 0, 0,
 6, 0,
 1
)= 0</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>Date must be weekday</errorMessage>
    </validationRules>
</CustomObject>